# ai-learning-journey

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
aj/src/day2/: math_dedup.py
day1/: math_utils.py  test_math_utils.py
day2/tests/: test_safe_factorial.py
src/aj/day1/: README.mad
src/aj/day2/: README.md  math_fact.py  math_fib.py
tests/day1/: test_math_utils.py
tests/day2/: test_fib.py  test_safe_factorial.py
